--- a/index.html
+++ b/index.html
@@ -3,38 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flashcard</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <section id="container">
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>programaçao</h3>
-                    <div class="cartao_conteudo_pergunta">
-                         o que é Javascript?
-                </div>
-                <div class="cartao_conteudo_resposta">
-                      o Javascript é uma linguagem de programaçao.
+        <section id="container" >
+            <article class="cartao"  >
+                <div class="cartao__conteudo" >
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta" >
+                        <p> O que é JavaScript? </p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p> O JavaScript é uma linguagem de programação.  </p>
+                    </div>
                 </div>
             </article>
 
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>programaçao</h3>
-                    <div class="cartao_conteudo_pergunta">
-                         o que é css?
-                </div>
-                <div class="cartao_conteudo_resposta">
-                    o css é uma linguagem de estilização.
+            <article class="cartao"  >
+                <div class="cartao__conteudo" >
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta" >
+                        <p>   O que é CSS?  </p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>  O CSS é uma linguagem de estilização. </p>
+                    </div>
                 </div>
             </article>
         </section>
     </main>
 
     <footer>
-        <p>projeto desenvolvido nas aulas de programaçao,sem fins lucrativos</p>
+        <p>Projeto desenvolvido nas aulas de programação, sem fins lucrativos.</p>
     </footer>
     
 </body>
