--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main>
-        <section id="container" >
-            <article class="cartao"  >
-                <div class="cartao__conteudo" >
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
                     <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta" >
+                    <div class="cartao__conteudo__pergunta">
                         <p> O que é JavaScript? </p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p> O JavaScript é uma linguagem de programação.  </p>
+                        <p> O JavaScript é uma linguagem de programação. </p>
                     </div>
                 </div>
             </article>
 
-            <article class="cartao"  >
-                <div class="cartao__conteudo" >
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta" >
-                        <p>   O que é CSS?  </p>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>geografia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>qual a capital da frança?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>  O CSS é uma linguagem de estilização. </p>
+                        <p>a capital da frança é paris</p>
                     </div>
                 </div>
             </article>
@@ -38,6 +40,7 @@
     <footer>
         <p>Projeto desenvolvido nas aulas de programação, sem fins lucrativos.</p>
     </footer>
-    
+
 </body>
+
 </html>
